# appleWin-linux

./: .gitignore  .travis.yml  AppleWin-VS2022.sln  AppleWin-VS2022.vcxproj  AppleWin-VS2022.vcxproj.filters  AppleWinExpress2019.vcxproj  AppleWinExpress2019.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  linux.md
.github/: README.md
.github/workflows/: build.yaml
libyaml/: CMakeLists.txt
minizip/: CMakeLists.txt
source/: CMakeLists.txt  Card.cpp  CardManager.cpp  Common.h  Disk.cpp  DiskImage.h  Harddisk.cpp  Log.cpp  Memory.cpp  MockingboardCardManager.cpp  NTSC.cpp  ProDOS_Utils.cpp  ProDOS_Utils.h  SerialComms.h  SoundBufferBase.h  SoundCore.cpp  SoundCore.h  Speaker.cpp  StdAfx.h  StrFormat.h  Uthernet2.cpp  Uthernet2.h  Utilities.cpp  Video.cpp
source/Configuration/: PropertySheetHelper.cpp
source/Debugger/: Debugger_Console.cpp  Debugger_Symbols.cpp
source/Tfe/: DNS.cpp  IPRaw.cpp  PCapBackend.cpp  tfearch.cpp
source/Windows/: WinFrame.cpp
source/frontends/common2/: CMakeLists.txt  argparser.cpp  commonframe.cpp  commonframe.h  fileregistry.cpp  getopt.c  getopt.h  gnuframe.cpp  gnuframe.h  ptreeregistry.cpp
source/frontends/libretro/: CMakeLists.txt  diskcontrol.cpp  environment.h  game.cpp  game.h  libretro.cpp  rdirectsound.cpp  resource2inl.sh  retroframe.cpp  retroframe.h  retroframeresources.cpp  retroregistry.cpp  retroregistry.h  serialisation.cpp
source/frontends/qt/: qdirectsound.cpp
source/frontends/sdl/: CMakeLists.txt  main.cpp  processfile.cpp  sdirectsound.cpp  sdlframe.cpp
source/frontends/sdl/imgui/: sdldebugger.cpp  sdlimguiframe.cpp  sdlsettings.cpp  settingshelper.cpp
source/linux/: cassettetape.cpp  linuxframe.cpp  linuxframe.h  linuxinterface.h  linuxsoundbuffer.cpp  paddle.cpp  registryclass.cpp  registryclass.h  soundbuffer.cpp  soundbuffer.h
source/linux/duplicates/: Keyboard.cpp  SerialComms.cpp
source/linux/libwindows/: CMakeLists.txt  dsound.cpp  dsound.h  wincompat.h
test/TestCPU6502/: CMakeLists.txt  stdafx.h
